--- a/pom.xml
+++ b/pom.xml
@@ -10,37 +10,31 @@
     <modelVersion>4.0.0</modelVersion>
 
     <modules>
-        <module>ruoyi-common-bom</module>
-        <module>ruoyi-common-social</module>
-        <module>ruoyi-common-core</module>
-        <module>ruoyi-common-doc</module>
-        <module>ruoyi-common-excel</module>
-        <module>ruoyi-common-idempotent</module>
-        <module>ruoyi-common-job</module>
-        <module>ruoyi-common-log</module>
-        <module>ruoyi-common-mail</module>
-        <module>ruoyi-common-mybatis</module>
-        <module>ruoyi-common-oss</module>
-        <module>ruoyi-common-ratelimiter</module>
-        <module>ruoyi-common-redis</module>
-        <module>ruoyi-common-satoken</module>
-        <module>ruoyi-common-security</module>
-        <module>ruoyi-common-sms</module>
-        <module>ruoyi-common-web</module>
-        <module>ruoyi-common-translation</module>
-        <module>ruoyi-common-sensitive</module>
-        <module>ruoyi-common-json</module>
-        <module>ruoyi-common-encrypt</module>
-        <module>ruoyi-common-tenant</module>
-        <module>ruoyi-common-websocket</module>
-        <module>ruoyi-common-sse</module>
+        <module>ruoyi-demo</module>
+        <module>ruoyi-generator</module>
+        <module>ruoyi-job</module>
+        <module>ruoyi-system</module>
+        <!--  隧道ZZT START  -->
+        <!--  隧道 安全保障模块  -->
+        <module>tunnel-security-guarantee</module>
+        <!--  隧道 环境监控模块  -->
+        <module>tunnel-environment-monitor</module>
+        <!--  隧道 隧道基本信息模块  -->
+        <module>tunnel-base-info</module>
+        <!--  隧道 AI报警模块  -->
+        <module>tunnel-ai-warning</module>
+        <!--  隧道 智能建造模块  -->
+        <module>tunnel-intelligent-construction</module>
+        <!--  隧道ZZT END  -->
+        <module>ruoyi-workflow</module>
+        <module>tunnel-monitor-video</module>
     </modules>
 
-    <artifactId>ruoyi-common</artifactId>
+    <artifactId>ruoyi-modules</artifactId>
     <packaging>pom</packaging>
 
     <description>
-        common 通用模块
+        ruoyi-modules 业务模块
     </description>
 
 </project>
